<resources>
    <string name="app_name">Fast Liv</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="connecter">Se conneter</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="pas_de_compte">Pas de compte, inscrivez-vous,</string>
    <string name="ici">ici</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="phone">Tél</string>
    <string name="immatriculation">Immatriculation</string>
    <string name="logo">logo</string>
    <string name="btnback">btnBack</string>
    <string name="client">Client</string>
    <string name="btnPanier">Panier</string>
    <string name="btnLogOut">Déconnecter</string>
    <string name="add">Ajouter\n</string>
    <string name="saved_id_client" />
    <string name="saved_nom_client" />
    <string name="saved_email_client" />
    <string name="supprimer">Supprimer</string>
    <string name="panier">Panier</string>
    <string name="adresse">Adresse</string>
    <string name="commander">Commander</string>
    <string name="voirPlus">Voir plus</string>
    <string name="planificateur">Planificateur</string>
    <string name="assignerChauffeur">Assignation</string>
    <string name="chauffeur">Chauffeur</string>
    <string name="btnMap">Map</string>

    <string-array name="Roles">
        <item>Chauffeur</item>
        <item>Client</item>
        <item>Planificateur</item>
    </string-array>

    <string-array name="Quantites">
        <item>1 kg</item>
        <item>2 kg</item>
        <item>3 kg</item>
        <item>4 kg</item>
        <item>5 kg</item>
    </string-array>
</resources>