<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#162471"
    tools:context=".ui.Connexion"
    tools:ignore="KeyboardInaccessibleWidget">

    <EditText
        android:id="@+id/connexion_password"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connexion_email" />

    <Button
        android:id="@+id/btn_connecte"
        android:layout_width="270dp"
        android:layout_height="52dp"
        android:layout_marginTop="70dp"
        android:text="@string/connecter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connexion_password" />

    <EditText
        android:id="@+id/connexion_email"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_marginTop="93dp"
        android:autofillHints="Email"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="159dp"
        android:layout_height="131dp"
        android:layout_marginTop="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titre_connexion"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/titre_connexion"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="152dp"
        android:text="@string/connexion"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back_espace_connexion"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back_espace_connexion"
        android:layout_width="18dp"
        android:layout_height="25dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/btnback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_back" />

</androidx.constraintlayout.widget.ConstraintLayout>