<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#162471"
    android:padding="2dp"
    tools:context=".ui.Client">

    <ImageView
        android:id="@+id/btn_deconnexion"
        android:layout_width="18dp"
        android:layout_height="25dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/btnLogOut"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

    <ImageView
        android:id="@+id/btnPanier"
        android:layout_width="28dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/btnPanier"
        android:onClick="goToPanier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/panier" />

    <TextView
        android:id="@+id/titre_client"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="124dp"
        android:text="@string/client"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnPanier"
        app:layout_constraintStart_toEndOf="@+id/btn_deconnexion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/revProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="58dp"
        android:layout_marginRight="15dp"
        android:background="#162471"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_deconnexion"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>