<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#162471"
    tools:context=".ui.Inscription"
    tools:ignore="KeyboardInaccessibleWidget">

    <Button
        android:id="@+id/btn_update"
        android:layout_width="270dp"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:text="Valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inscrire_immatriculation"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints="Immatriculation"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/immatriculation"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscrire_role" />

    <EditText
        android:id="@+id/inscrire_password"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints="Mot de passe"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscrire_email" />

    <EditText
        android:id="@+id/inscrire_email"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:autofillHints="Email"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/inscrire_phone"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscrire_password" />

    <Spinner
        android:id="@+id/inscrire_role"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_spinner"
        android:entries="@array/Roles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscrire_phone" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="146dp"
        android:layout_marginTop="70dp"
        android:contentDescription="logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/titre_update"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="26dp"
        android:text="Mise à jour"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>